Fix minor css issues: date format, font size, spacing issues

--- a/client/app.css
+++ b/client/app.css
@@ -1,6 +1,6 @@
 .wrapper {
   display: grid;
-  grid-template-columns: 1fr 4fr 1fr;
+  grid-template-columns: 1fr 7fr 1fr;
 }
 
 .contentWrapper {
@@ -9,10 +9,9 @@
 }
 
 .horizontalMargin {
-  background: #ddd;
+
 }
 
 .verticalMargin {
   height: 50px;
-  background: #ddd;
 }
